<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Labs</string>
    <string name="gui">Look at my GUI</string>
    <string name="click">CLICK HERE</string>
    <string name="check">Check this out!</string>
    <string name="switon">Switch on/off!</string>
    <string name="type_here">Type here</string>
    <string name="TOAST_MESSAGE">Click here for more information</string>
    <string name="switch2">Click here for more information</string>
    <string name="undo">UNDO</string>
    <string name="done">DONE</string>
    <string name="nation_flag">nation flag</string>
    <drawable name="canadian"> @drawable/flag </drawable>
</resources>