<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4">
        <TextView

            android:id="@+id/textView"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:text="@string/gui"
            android:textSize='30sp'/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:onClick="display_Toast"
            android:text="@string/click" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/check"
            />
        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:background="@drawable/canadian"
            android:contentDescription="@string/nation_flag"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switon"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:onClick="display_snack"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginTop="10dp"
            android:autofillHints="name"
            android:hint="@string/type_here"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

    </GridLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>